# marble-gravity

./: Cargo.nix  Cargo.toml  README.md  build.rs  crate-hashes.json  flake.nix  index.html  rust.nix  serve.py  wasm.nix
.cargo/: config.toml
assets/: compute.js  index.html  module-workers-polyfill.js  worker.js  workermain.js
crates/marble-gravity/: Cargo.toml  build.rs
crates/marble-gravity/src/: camera.rs  graphics.rs  lib.rs  main.rs  run.rs  shader.frag  shader.vert  spheretree.rs
crates/nbody/: Cargo.toml
crates/nbody/src/: body.rs  inner.rs  lib.rs  outer.rs
crates/physics/: Cargo.toml
crates/physics/src/: body.rs  lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs
src/: camera.rs  graphics.rs  lib.rs  main.rs  nbody.rs  physics.rs  run.rs  shader.frag  shader.vert  spheretree.rs
