[package]
name = "marble-gravity"
version = "0.1.0"
authors = ["Loke Gustafsson <lokegustafsson@pm.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = "1"
cgmath = "0.18"
log = "0.4"
rand = "0.8"
rayon = "1"
wgpu = { version = "0.14" }
winit = "0.27"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt"] }
env_logger = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2.0"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wgpu = { version = "0.14", features = ["webgl"]}
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[build-dependencies]
blake3 = "1"
glob = "0.3"
naga = { version = "0.10", features = ["glsl-in", "wgsl-out", "validate"] }
tokio = "1"

[workspace]
resolver = "2"
