[package]
name = "marble-gravity"
version = "0.1.0"
authors = ["Loke Gustafsson <lokegustafsson@pm.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1", features = ["extern_crate_alloc"] }
cgmath = "0.18"
image = "0.24"
instant = "0.1"
log = "0.4"
physics = { path = "../physics" }
wgpu = { version = "0.14" }
wgpu_glyph = "0.18"
winit = "0.27"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
pollster = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2.0"
instant = { version = "0.1", features = ["wasm-bindgen"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wgpu = { version = "0.14", features = ["webgl"]}
worker = { path = "../worker", features = ["outer"] }
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[target.'cfg(target_os = "rust_build_std_vendor_imcompatability")'.dependencies]
unwinding = "0.2.1"
r-efi = "4.2.0"
r-efi-alloc = "1.0.0"
addr2line = "0.21"
compiler_builtins = "=0.1.108"
dlmalloc = "0.2"
fortanix-sgx-abi = "0.5"
getopts = "0.2"
gimli = "0.26"
miniz_oxide = "0.5"
object = "^0.32.0"
object2 = { package = "object", version = "^0.34.0" }
rustc-demangle = "0.1"
memchr = "=2.5.0"

[build-dependencies]
blake3 = "1"
glob = "0.3"
naga = { version = "0.10", features = ["glsl-in", "wgsl-out", "validate"] }
