[package]
name = "physics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1", features = ["extern_crate_alloc"] }
cgmath = "0.18"
instant = "0.1"
log = "0.4"
rand = "0.8"
rand_distr = "0.4"
winit = "0.27"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
rayon = { version = "1", optional = true }
getrandom = { version = "0.2", features = ["js"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }
